syntax = "proto3";

package api;

option go_package = "github.com/ConnectEverything/nex/agentapi";

import "events.proto";
import "google/protobuf/timestamp.proto";

//import "google/protobuf/duration.proto";

// The communication protocol by which the node service (outer process) communicates with
// the inner (firecracker-bound) agent process
service NexAgent {
    rpc GetHealth(Void) returns (HealthReply) {}    
    rpc SubscribeToLogs(Void) returns (stream LogEntry) {}
    rpc SubscribeToEvents(Void) returns (stream AgentEvent) {}
    rpc SubmitWorkload(stream Workload) returns (WorkloadAck) {}
}

message Workload {
    oneof chunk_type {
        bytes chunk = 1;
        WorkloadMetadata header = 2;
    }
}

message WorkloadMetadata {
    string hash = 1;
    string name = 2;
    int32 total_bytes = 3;
    map<string, string> runtime_environment = 4;
}

message WorkloadAck {
    bool error = 1;
    string message = 2;
}

message LogEntry {
    string source = 1;
    LogLevel level = 2;
    string text = 3;
}

message HealthReply {
    bool healthy = 1;
    string agent_version = 2;
}

message AgentEvent {
    google.protobuf.Timestamp event_time = 1;    
    oneof data {
        AgentStartedEvent agent_started = 2;        
        WorkloadStartedEvent workload_started = 3;
        WorkloadStoppedEvent workload_stopped = 4;        
        AgentStoppedEvent agent_stopped = 5;
    }
}

message Void{}

enum LogLevel {
    LEVEL_PANIC = 0;
    LEVEL_FATAL = 1;
    LEVEL_ERROR = 2;
    LEVEL_WARN = 3;
    LEVEL_INFO = 4;
    LEVEL_DEBUG = 5;
    LEVEL_TRACE = 6;
}